# aonarr

./: .env.example  .env.production.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  bible.py  chapters.py  costs.py  deps.py  exports.py  health.py  llm_profiles.py  projects.py  prompt_templates.py  runs.py  runtime.py
backend/app/core/: config.py  database.py  errors.py  security.py  store.py
backend/app/models/: schemas.py
backend/app/services/: llm_client.py  prompt_templates.py  serial_engine.py
backend/migrations/: 001_initial_schema.sql
backend/scripts/: apply_migrations.py  smoke_check.py  unit_check.py
backend/tests/: test_api_smoke.py  test_llm_client.py
docs/: clean-room-log.md  prompt-workflow.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  biblePayload.ts  formDefaults.ts  styles.css  types.ts  workspaceConfig.ts
frontend/src/components/: DashboardPage.vue  LoginPage.vue  SettingsPage.vue  StudioPage.vue  WorkbenchPage.vue  WorkspaceShell.vue
frontend/src/composables/: useAuth.ts  useNavigation.ts  useWorkspace.ts  useWorkspaceActions.ts  useWorkspaceDashboard.ts  useWorkspaceData.ts  useWorkspaceForms.ts
infra/: README.md  docker-compose.prod.yml  docker-compose.yml
