[project]
name = "aonarr-backend"
version = "0.1.0"
description = "Clean-room backend for aonarr"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "cryptography>=42.0,<45.0",
  "httpx>=0.27,<1.0",
  "psycopg[binary]>=3.2,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
